--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
+    "@vueuse/core": "^12.5.0",
     "nuxt": "^3.15.3",
     "openai": "^4.80.1",
+    "tailwindcss": "^4.0.0",
     "vue": "latest",
     "vue-router": "latest",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "zod": "^3.24.1"
   },
   "packageManager": "pnpm@8.15.5+sha1.a58c038faac410c947dbdb93eb30994037d0fce2"
 }
